# noughts-and-crosses

./: .editorconfig  README.md
.github/workflows/: functional_testing.yml  server.yml
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/crates/functional_testing/: Cargo.toml
server/crates/functional_testing/src/: app_client.rs  http.rs  lib.rs
server/crates/functional_testing/src/app_client/: mod.rs  routes.rs
server/crates/functional_testing/src/response/: app_status_response.rs  create_room.rs  mod.rs  register_user.rs
server/crates/nc_test_client/: Cargo.toml
server/crates/nc_test_client/src/: lib.rs
server/crates/nc_test_client/src/app_client/: game_move.rs  mod.rs
server/crates/nc_test_client/src/response/: simple_error.rs
server/scripts/: server_autoreload.ps1  server_autoreload.sh
server/src/: app.rs  lib.rs
server/src/application/: application_service.rs  error.rs  game_move.rs  mod.rs
server/src/domain/: mod.rs  room_assignment_service.rs
server/src/domain/game/: error.rs  game_manager.rs  game_play_service.rs  game_repository.rs  mod.rs
server/src/domain/game/game_move/: error.rs  game_move_position.rs  mod.rs
server/src/domain/room/: error.rs  mod.rs  room_factory.rs  room_manager.rs  room_repository.rs
server/src/domain/room/room_manager/: error.rs  mod.rs
server/src/domain/user/: error.rs  mod.rs  user_factory.rs  user_repository.rs
server/src/domain/user/user_client/: mod.rs  user_client_provider.rs
server/src/ports/http/: mod.rs
server/src/ports/http/warp/: mod.rs  status_handler.rs
server/src/ports/http/warp/filters/: app_status.rs  application_service.rs  become_player.rs  create_room.rs  get_user_name.rs  join_new_room.rs  join_room.rs  make_game_moves.rs  mod.rs  percent_decoded.rs  register_user.rs  start_new_game.rs  user_client_provider.rs
server/src/ports/http/warp/requests/: game_move.rs  mod.rs
server/src/ports/http/warp/responses/: create_room_response.rs  mod.rs  register_user_response.rs  simple_error_response.rs
server/src/ports/http/warp/user_client/: mod.rs  ws_user_client_provider_adapter.rs
server/src/ports/persistence/: mod.rs
server/src/ports/persistence/map/: map_game_repository_adapter.rs  map_room_repository_adapter.rs  map_user_repository_adapter.rs  mod.rs
server/src/ports/persistence/vec/: mod.rs  vec_room_repository_adapter.rs  vec_user_repository_adapter.rs
server/tests/: testing.rs
server/tests/admin/: status.rs
server/tests/api/: main.rs
server/tests/api/admin/: status.rs
server/tests/api/game/: become_player_in_game.rs  create_room.rs  get_user_name.rs  join_new_room.rs  join_room.rs  leave_room.rs  leave_room_if_disconnects.rs  make_a_move.rs  mod.rs  register_user.rs  start_new_game.rs  users.rs
server/tests/api/helpers/: game_moves.rs  mod.rs
server/tests/common/: mod.rs
server/tests/game/: create_room.rs
