[package]
name = "server"
version = "0.1.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3"

[dev-dependencies]

# workspace deps
functional_testing = { path = "./crates/functional_testing" }

# crates.io deps
spectral = "0.6"

[workspace]
members = [ ".", "crates/*" ]
