[package]
name = "server"
version = "0.1.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
env_logger = "0.8"
futures-util = "0.3"
log = "0.4"
parking_lot = "0.11"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3"

[dev-dependencies]

# workspace deps
nc_test_client = { path = "crates/nc_test_client" }

# crates.io deps
lazy_static = "1.4"
spectral = "0.6"

[workspace]
members = [".", "crates/*"]
